--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -51,10 +51,19 @@
       grid-template-columns: repeat(12, 1fr);
 }
 
+/*-- 1.2. House Storage Page Template --*/
+.body-house {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[12];
+      grid-template-columns: repeat(12, 1fr);
+}
+
 /*------------------------------- 2. Navigation ----*/
 /*-- 2.1. Navbar Top --*/
 .navbar__top, .navbar__bottom {
   grid-column: span 12;
+  padding: 4rem 2rem;
   padding: 0 2rem;
 }
 
@@ -89,11 +98,13 @@
 /*-- 3.1.1. Hero ----*/
 .hero {
   grid-column: span 12;
+  padding: 4rem 2rem;
+  padding: 0;
 }
 
 /*-- 3.1.2. Hero Container --*/
 .hero__container {
-  padding: 0 2rem;
+  padding: 6rem 2rem;
 }
 
 /*-- 3.1.3. Hero Container Inner --*/
@@ -109,13 +120,14 @@
       -ms-flex-align: start;
           align-items: flex-start;
   max-width: 1200px;
-  margin: 6rem auto;
+  margin: 0 auto;
 }
 
 /*------------- 3.2. Services Section ----*/
 /*-- 3.2.1. Services --*/
 .services {
   grid-column: span 12;
+  padding: 4rem 2rem;
 }
 
 /*-- 3.2.2. Services Container --*/
@@ -128,14 +140,13 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin: 4rem 10%;
 }
 
 /*----------- 3.3. How It Works Section --*/
 /*-- 3.3.1. How It Works --*/
 .how-works {
   grid-column: span 12;
-  margin: 4rem 2rem;
+  padding: 4rem 2rem;
 }
 
 /*-- 3.3.2. How It Works Container --*/
@@ -155,6 +166,7 @@
 /*-- 3.4.1. About --*/
 .about {
   grid-column: span 12;
+  padding: 4rem 2rem;
 }
 
 /*-- 3.4.2. About Container --*/
@@ -163,7 +175,7 @@
   display: -ms-flexbox;
   display: flex;
   max-width: 1200px;
-  margin: 2rem auto;
+  margin: 0 auto;
 }
 
 /*-- 3.4.3. About Image --*/
@@ -187,6 +199,82 @@
 .about__info p:first-of-type {
   margin-bottom: 1rem;
   font-weight: bold;
+}
+
+/*-------------- 4. House Storage Page Sections ----*/
+/*----------------- 4.1. Header Section --*/
+.house-header {
+  grid-column: span 12;
+  padding: 4rem 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  justify-self: center;
+  max-width: 1200px;
+}
+
+.house-header h1, .house-header h2, .house-header h3 {
+  margin-bottom: 2rem;
+}
+
+.house-header p:first-of-type {
+  margin-bottom: 1rem;
+}
+
+.house-header__img {
+  width: 50%;
+  height: auto;
+  -webkit-clip-path: polygon(20% 0, 100% 0%, 100% 100%, 0 100%);
+          clip-path: polygon(20% 0, 100% 0%, 100% 100%, 0 100%);
+}
+
+.house-header__info {
+  width: 50%;
+}
+
+/*---------------- 4.2. Why Us? Section --*/
+.why-us {
+  grid-column: span 12;
+  padding: 4rem 2rem;
+}
+
+.why-us__container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 2rem;
+}
+
+.list-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+/*---------------- 4.3. Access Section --*/
+.access {
+  grid-column: span 12;
+  padding: 4rem 2rem;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+/*---------------- 4.4. Flexible Section --*/
+.flexible {
+  grid-column: span 12;
+  padding: 4rem 2rem;
+}
+
+/*---------------- 4.5. Security Section --*/
+.security {
+  grid-column: span 12;
+  padding: 4rem 2rem;
+}
+
+/*---------------- 4.6. Quote Section --*/
+.quote {
+  grid-column: span 12;
+  padding: 4rem 2rem;
+  text-align: center;
 }
 
 /*----------------------------------- ?. Footer ----*/
@@ -469,6 +557,17 @@ hr {
   width: 100px;
   height: auto;
   margin-bottom: 1rem;
+}
+
+/*-------------------------- 8. Lists ----*/
+.why-us__list {
+  padding: 1rem;
+}
+
+.why-us__list li {
+  background: url("/src/images/phone.svg") no-repeat;
+  background-position: left center;
+  padding: 10px 10px 10px 40px;
 }
 
 @-webkit-keyframes bg-scale {
@@ -772,6 +871,7 @@ body {
 /*-- 3.1. Headers --*/
 h1, h2, h3 {
   font-weight: 900;
+  font-size: 4rem;
 }
 
 h2 {
@@ -779,7 +879,7 @@ h2 {
 }
 
 h3 {
-  font-size: 1.5rem;
+  font-size: 2rem;
 }
 
 .header-top {
@@ -862,7 +962,27 @@ small {
   background-size: cover;
 }
 
-/*-- Footer --*/
+/*----------------------- 6. House Storage Page ----*/
+.house-header__img {
+  background: url("/src/images/1.jpg") center center no-repeat;
+  background-size: cover;
+}
+
+.why-us {
+  background: #16324f;
+  color: #ffffff;
+}
+
+.flexible {
+  background: #16324f;
+  color: #ffffff;
+}
+
+.quote {
+  background: #d7cdcc;
+}
+
+/*-------------------------------- 5. Footer ----*/
 footer {
   background: #16324f;
   color: #ffffff;
