--- a/src/styles/scss/styles.scss
+++ b/src/styles/scss/styles.scss
@@ -41,6 +41,7 @@ body {
 /*-- 3.1. Headers --*/
 h1 {
     font-weight: 900;
+    font-size: 4rem;
 }
 
 h2 {
@@ -50,7 +51,7 @@ h2 {
 
 h3 {
     @extend h1;
-    font-size: 1.5rem;
+    font-size: 2rem;
 }
 
 .header-top {
@@ -131,7 +132,34 @@ small {
     background-size: cover;
 }
 
-/*-- Footer --*/
+
+/*----------------------- 6. House Storage Page ----*/
+.house-header__img {
+    background: url("/src/images/1.jpg") center center no-repeat;
+    background-size: cover;
+}
+
+.why-us {
+    background: $color4;
+    color: $white;
+}
+
+.flexible {
+    background: $color4;
+    color: $white;
+}
+
+.quote {
+    background: $color5;
+}
+
+
+
+
+
+
+
+/*-------------------------------- 5. Footer ----*/
 footer {
     background: $color4;
     color: $white;
