--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -15,7 +15,7 @@
 ------------------------------------------------------
 
 1. Page Templates
-    1.1. Home Page Template
+    1.1. 12 Column Template
 
 2. Navigation
     2.1. Navbar Top
@@ -43,16 +43,8 @@
 
 */
 /*--------------------------- 1. Page Templates ----*/
-/*-- 1.1. Home Page Template --*/
-.body-home {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[12];
-      grid-template-columns: repeat(12, 1fr);
-}
-
-/*-- 1.2. House Storage Page Template --*/
-.body-house {
+/*-- 1.1. 12 Column Template --*/
+.grid-12 {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr)[12];
@@ -61,15 +53,15 @@
 
 /*------------------------------- 2. Navigation ----*/
 /*-- 2.1. Navbar Top --*/
-.navbar__top, .navbar__bottom {
+.navbar-top, .navbar-bottom {
   grid-column: span 12;
   padding: 4rem 2rem;
   padding: 0 2rem;
 }
 
 /*-- 2.2. Navbar Bottom --*/
-/*-- 2.3. Navbar Container --*/
-.navbar__container {
+/*-- 2.3. Navbar Inner --*/
+.navbar-inner {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -84,7 +76,7 @@
 }
 
 /*-- 2.4. Navbar Menu --*/
-.navbar__nav {
+.navbar-inner__nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -99,16 +91,12 @@
 .hero {
   grid-column: span 12;
   padding: 4rem 2rem;
+  position: relative;
   padding: 0;
 }
 
 /*-- 3.1.2. Hero Container --*/
-.hero__container {
-  padding: 6rem 2rem;
-}
-
-/*-- 3.1.3. Hero Container Inner --*/
-.hero__container__inner {
+.hero__inner {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -121,6 +109,7 @@
           align-items: flex-start;
   max-width: 1200px;
   margin: 0 auto;
+  padding: 6rem 2rem;
 }
 
 /*------------- 3.2. Services Section ----*/
@@ -256,6 +245,11 @@
   padding: 4rem 2rem;
   max-width: 1200px;
   margin: 0 auto;
+  text-align: center;
+}
+
+.access p:last-of-type {
+  margin: 1rem 0;
 }
 
 /*---------------- 4.4. Flexible Section --*/
@@ -264,10 +258,31 @@
   padding: 4rem 2rem;
 }
 
+.flexible__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 2rem;
+}
+
+.flexible__img {
+  width: 50%;
+  height: auto;
+}
+
+.flexible__info {
+  width: 50%;
+  margin-left: 2rem;
+}
+
 /*---------------- 4.5. Security Section --*/
 .security {
   grid-column: span 12;
   padding: 4rem 2rem;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
 /*---------------- 4.6. Quote Section --*/
@@ -309,7 +324,7 @@ footer {
 }
 
 .footer-top__left span {
-  margin-left: 1rem;
+  margin-left: 0.5rem;
 }
 
 .footer-top__left span:first-of-type {
@@ -435,7 +450,7 @@ button:active {
 }
 
 /*------------------------------------- 3. Logo ----*/
-.navbar__logo {
+.navbar-inner__logo {
   width: 150px;
   height: auto;
 }
@@ -560,6 +575,10 @@ hr {
 }
 
 /*-------------------------- 8. Lists ----*/
+li {
+  line-height: 1.3rem;
+}
+
 .why-us__list {
   padding: 1rem;
 }
@@ -756,7 +775,7 @@ hr {
   .burger-btn:checked + .burger-label .bottom {
     opacity: 0;
   }
-  .burger-btn:checked + .burger-label + .navbar__nav {
+  .burger-btn:checked + .burger-label + .navbar-inner__nav {
     -webkit-transform: translateY(100vh);
             transform: translateY(100vh);
   }
@@ -776,7 +795,7 @@ hr {
     -webkit-transition: all 0.1s ease-in-out;
     transition: all 0.1s ease-in-out;
   }
-  .navbar__nav {
+  .navbar-inner__nav {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -880,6 +899,7 @@ h2 {
 
 h3 {
   font-size: 2rem;
+  margin-bottom: 1rem;
 }
 
 .header-top {
@@ -909,19 +929,19 @@ small {
 
 /*------------------------------- 4. Navigation ----*/
 /*-- 4.1. Navbar Top --*/
-.navbar__top, .navbar__bottom {
+.navbar-top, .navbar-bottom {
   background: #dd6e42;
   color: #3f3f3f;
 }
 
 /*-- 4.2. Navbar Bottom --*/
-.navbar__bottom {
+.navbar-bottom {
   background: #16324f;
   color: #ffffff;
 }
 
 /*-- 4.3. Navbar Phone --*/
-.navbar__phone {
+.navbar-inner__phone {
   color: #ffffff;
   font-weight: bold;
 }
@@ -929,8 +949,8 @@ small {
 /*-------------------------------- 5. Home Page ----*/
 /*-- 5.1. Hero Section --*/
 .hero {
-  position: relative;
   overflow: hidden;
+  color: #ffffff;
 }
 
 .hero::before {
@@ -944,12 +964,6 @@ small {
   background-size: cover;
   -webkit-animation: bg-scale 20s linear infinite;
           animation: bg-scale 20s linear infinite;
-}
-
-.header-top,
-.header-middle,
-.header-bottom {
-  color: #ffffff;
 }
 
 /*-- 5.2. About Section --*/
@@ -976,6 +990,11 @@ small {
 .flexible {
   background: #16324f;
   color: #ffffff;
+}
+
+.flexible__img {
+  background: url("/src/images/1.jpg") center center no-repeat;
+  background-size: cover;
 }
 
 .quote {
