--- a/src/styles/css/styles.css
+++ b/src/styles/css/styles.css
@@ -120,7 +120,7 @@
 }
 
 /*-- 3.2.2. Services Container --*/
-.services__container {
+.services__inner {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr)[4];
@@ -139,7 +139,7 @@
 }
 
 /*-- 3.3.2. How It Works Container --*/
-.how-works__container {
+.how-works__inner {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr)[4];
@@ -159,7 +159,7 @@
 }
 
 /*-- 3.4.2. About Container --*/
-.about__container {
+.about__inner {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -168,24 +168,24 @@
 }
 
 /*-- 3.4.3. About Image --*/
-.about__img {
+.about__inner__img {
   width: 50%;
   height: auto;
   margin-left: 2rem;
 }
 
 /*-- 3.4.4. About Info --*/
-.about__info {
+.about__inner__info {
   width: 50%;
   padding: 2rem;
 }
 
-.about__info h3 {
+.about__inner__info h3 {
   margin-bottom: 2rem;
   color: #c85324;
 }
 
-.about__info p:first-of-type {
+.about__inner__info p:first-of-type {
   margin-bottom: 1rem;
   font-weight: bold;
 }
@@ -195,30 +195,35 @@
 .house-header {
   grid-column: span 12;
   padding: 4rem 2rem;
+}
+
+.header__inner {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  justify-self: center;
   max-width: 1200px;
-}
-
-.house-header h1, .house-header h2, .house-header h3 {
-  margin-bottom: 2rem;
-}
-
-.house-header p:first-of-type {
-  margin-bottom: 1rem;
+  margin: 0 auto;
 }
 
 .house-header__img {
   width: 50%;
   height: auto;
+  margin-left: 2rem;
   -webkit-clip-path: polygon(20% 0, 100% 0%, 100% 100%, 0 100%);
           clip-path: polygon(20% 0, 100% 0%, 100% 100%, 0 100%);
 }
 
 .house-header__info {
   width: 50%;
+  padding: 2rem;
+}
+
+.house-header__info h1, .house-header__info h2, .house-header__info h3 {
+  margin-bottom: 2rem;
+}
+
+.house-header__info p:first-of-type {
+  margin-bottom: 1rem;
 }
 
 /*---------------- 4.2. Why Us? Section --*/
@@ -227,13 +232,13 @@
   padding: 4rem 2rem;
 }
 
-.why-us__container {
+.why-us__inner {
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 2rem;
 }
 
-.list-container {
+.list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -267,12 +272,12 @@
   padding: 0 2rem;
 }
 
-.flexible__img {
+.flexible__inner__img {
   width: 50%;
   height: auto;
 }
 
-.flexible__info {
+.flexible__inner__info {
   width: 50%;
   margin-left: 2rem;
 }
@@ -529,9 +534,9 @@ hr {
       -ms-flex-align: center;
           align-items: center;
   text-align: center;
-  width: 250px;
-  height: 250px;
-  margin: 0 1rem;
+  width: 100%;
+  height: auto;
+  margin: 0;
   position: relative;
   background: #16324f;
   color: #ffffff;
@@ -559,8 +564,8 @@ hr {
       -ms-flex-align: center;
           align-items: center;
   text-align: center;
-  width: 250px;
-  height: 250px;
+  width: 200px;
+  height: 200px;
   margin: 0 1rem;
   padding: 0 3rem;
   background: #16324f;
@@ -579,11 +584,11 @@ li {
   line-height: 1.3rem;
 }
 
-.why-us__list {
+.list__why-us {
   padding: 1rem;
 }
 
-.why-us__list li {
+.list__why-us li {
   background: url("/src/images/phone.svg") no-repeat;
   background-position: left center;
   padding: 10px 10px 10px 40px;
@@ -699,8 +704,19 @@ li {
 }
 
 @media (max-width: 767px) {
-  .services__container,
-  .how-works__container {
+  .services__inner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .how-works__inner {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -714,24 +730,54 @@ li {
   }
   .how-works {
     margin: 4rem 0;
+    padding: 0;
   }
   .how-works h2 {
     margin: 0 2rem;
   }
-  .about__container {
+  .about__inner {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
     margin: 0;
   }
-  .about__img,
-  .about__info {
+  .about__inner__img {
     width: 100%;
-  }
-  .about__img {
     min-height: 40vh;
     margin-left: 0;
+  }
+  .about__inner__info {
+    width: 100%;
+    padding: 2rem 0 0 0;
+  }
+  .why-us__inner {
+    padding: 0;
+  }
+  .list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .list__why-us {
+    padding: 0;
+  }
+  .flexible__inner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 0;
+  }
+  .flexible__inner__img {
+    width: 100%;
+    min-height: 40vh;
+  }
+  .flexible__inner__info {
+    width: 100%;
+    padding: 2rem 0 0 0;
+    margin: 0;
   }
   .footer-top, .footer-middle, .footer-bottom {
     display: -webkit-box;
@@ -822,14 +868,35 @@ li {
   .nav__btn {
     margin-left: 0;
   }
+  .header__inner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin: 0;
+  }
+  .house-header__img {
+    width: 100%;
+    min-height: 40vh;
+    margin-left: 0;
+    margin-top: 2rem;
+  }
+  .house-header__info {
+    width: 100%;
+    padding: 0;
+  }
+  .house-header__info h1, .house-header__info h2, .house-header__info h3 {
+    font-size: 2.5rem;
+  }
 }
 
 @media (max-width: 1199px) {
-  .services__container,
-  .how-works__container {
+  .services__inner,
+  .how-works__inner {
     -ms-grid-columns: (1fr)[2];
         grid-template-columns: repeat(2, 1fr);
     justify-items: center;
+    grid-gap: 40px;
   }
 }
 
@@ -891,6 +958,7 @@ body {
 h1, h2, h3 {
   font-weight: 900;
   font-size: 4rem;
+  margin-bottom: 1rem;
 }
 
 h2 {
@@ -899,20 +967,9 @@ h2 {
 
 h3 {
   font-size: 2rem;
-  margin-bottom: 1rem;
 }
 
-.header-top {
-  -webkit-animation: header-translate 1s linear 1;
-          animation: header-translate 1s linear 1;
-}
-
-.header-middle {
-  -webkit-animation: header-translate 1s linear 1;
-          animation: header-translate 1s linear 1;
-}
-
-.header-bottom {
+.header-top, .header-middle, .header-bottom {
   -webkit-animation: header-translate 1s linear 1;
           animation: header-translate 1s linear 1;
 }
@@ -971,7 +1028,7 @@ small {
   background: #d7cdcc;
 }
 
-.about__img {
+.about__inner__img {
   background: url("/src/images/1.jpg") center center no-repeat;
   background-size: cover;
 }
@@ -992,7 +1049,7 @@ small {
   color: #ffffff;
 }
 
-.flexible__img {
+.flexible__inner__img {
   background: url("/src/images/1.jpg") center center no-repeat;
   background-size: cover;
 }
