--- a/src/styles/scss/_layout.scss
+++ b/src/styles/scss/_layout.scss
@@ -35,41 +35,34 @@
 
 /*-- 1.1. 12 Column Template --*/
 .grid-12 {
-  @include grid-template-12;
+    @include grid-template-12;
 }
 
 /*------------------------------- 2. Navigation ----*/
 
 /*-- 2.1. Navbar Top --*/
 .navbar-top {
-  @include grid-col-12;
-  padding: 0 2rem;
+    @include grid-col-12;
+    padding: 0 2rem;
 }
 
 /*-- 2.2. Navbar Bottom --*/
 .navbar-bottom {
-  @extend .navbar-top;
+    @extend .navbar-top;
 }
 
 /*-- 2.3. Navbar Inner --*/
 .navbar-inner {
-  @include flex-between-center;
-  max-width: $max-width;
-  margin: 0.8rem auto;
+    @include flex-between-center;
+    max-width: $max-width;
+    margin: 0.8rem auto;
 }
 
 /*-- 2.4. Navbar Menu --*/
 .navbar-inner__nav {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 }
-
-
-
-
-
-
-
 
 /*----------------------- 3. Home Page Sections ----*/
 
@@ -77,254 +70,230 @@
 
 /*-- 3.1.1. Hero ----*/
 .hero {
-  @include grid-col-12;
-  position: relative;
-  padding: 0;
+    @include grid-col-12;
+    position: relative;
+    padding: 0;
 }
 
 /*-- 3.1.2. Hero Container --*/
 .hero__inner {
-  @include flex-col-start;
-  max-width: $max-width;
-  margin: 0 auto;
-  padding: 6rem 2rem;
+    @include flex-col-start;
+    max-width: $max-width;
+    margin: 0 auto;
+    padding: 6rem 2rem;
 }
-
-
-
-
-
-
-
-
 
 /*------------- 3.2. Services Section ----*/
 
 /*-- 3.2.1. Services --*/
 .services {
-  @include grid-col-12;
+    @include grid-col-12;
 }
 
 /*-- 3.2.2. Services Container --*/
-.services__container {
-  @include grid-template-4;
+.services__inner {
+    @include grid-template-4;
 }
 
 /*----------- 3.3. How It Works Section --*/
 
 /*-- 3.3.1. How It Works --*/
 .how-works {
-  @include grid-col-12;
+    @include grid-col-12;
 }
 
 /*-- 3.3.2. How It Works Container --*/
-.how-works__container {
-  @include grid-template-4;
-  margin: 4rem 10% 0 10%;
+.how-works__inner {
+    @include grid-template-4;
+    margin: 4rem 10% 0 10%;
 }
 
 /*------------------ 3.4. About Section --*/
 
 /*-- 3.4.1. About --*/
 .about {
-  @include grid-col-12;
+    @include grid-col-12;
 }
 
 /*-- 3.4.2. About Container --*/
-.about__container {
-  display: flex;
-  max-width: $max-width;
-  margin: 0 auto;
+.about__inner {
+    display: flex;
+    max-width: $max-width;
+    margin: 0 auto;
 }
 
 /*-- 3.4.3. About Image --*/
-.about__img {
-  width: 50%;
-  height: auto;
-  margin-left: 2rem;
+.about__inner__img {
+    width: 50%;
+    height: auto;
+    margin-left: 2rem;
 }
 
 /*-- 3.4.4. About Info --*/
-.about__info {
-  width: 50%;
-  padding: 2rem;
+.about__inner__info {
+    width: 50%;
+    padding: 2rem;
 
-  & h3 {
-    margin-bottom: 2rem;
-    color: darken($color: $color1, $amount: 10%);
-  }
+    & h3 {
+        margin-bottom: 2rem;
+        color: darken($color: $color1, $amount: 10%);
+    }
 
-  & p:first-of-type {
-    margin-bottom: 1rem;
-    font-weight: bold;
-  }
+    & p:first-of-type {
+        margin-bottom: 1rem;
+        font-weight: bold;
+    }
 }
 
 /*-------------- 4. House Storage Page Sections ----*/
 
 /*----------------- 4.1. Header Section --*/
 .house-header {
-  @include grid-col-12;
-  display: flex;
-  justify-self: center;
-  max-width: $max-width;
+    @include grid-col-12;
+}
 
-  & h1 {
-    margin-bottom: 2rem;
-  }
-
-  & p:first-of-type {
-    margin-bottom: 1rem;
-  }
+.header__inner {
+    display: flex;
+    max-width: $max-width;
+    margin: 0 auto;
 }
 
 .house-header__img {
-  width: 50%;
-  height: auto;
-  clip-path: polygon(20% 0, 100% 0%, 100% 100%, 0 100%);
+    width: 50%;
+    height: auto;
+    margin-left: 2rem;
+    clip-path: polygon(20% 0, 100% 0%, 100% 100%, 0 100%);
 }
 
 .house-header__info {
-  width: 50%;
+    width: 50%;
+    padding: 2rem;
+
+    & h1 {
+        margin-bottom: 2rem;
+    }
+
+    & p:first-of-type {
+        margin-bottom: 1rem;
+    }
 }
 
 /*---------------- 4.2. Why Us? Section --*/
 .why-us {
-  @include grid-col-12;
+    @include grid-col-12;
 }
 
-.why-us__container {
-  max-width: $max-width;
-  margin: 0 auto;
-  padding: 0 2rem;
+.why-us__inner {
+    max-width: $max-width;
+    margin: 0 auto;
+    padding: 0 2rem;
 }
 
-.list-container {
-  display: flex;
+.list {
+    display: flex;
 }
 
 /*---------------- 4.3. Access Section --*/
 .access {
-  @include grid-col-12;
-  max-width: $max-width;
-  margin: 0 auto;
-  text-align: center;
+    @include grid-col-12;
+    max-width: $max-width;
+    margin: 0 auto;
+    text-align: center;
 
-  & p:last-of-type {
-    margin: 1rem 0;
-  }
+    & p:last-of-type {
+        margin: 1rem 0;
+    }
 }
 
 /*---------------- 4.4. Flexible Section --*/
 .flexible {
-  @include grid-col-12;
+    @include grid-col-12;
 }
 
 .flexible__inner {
-  display: flex;
-  max-width: $max-width;
-  margin: 0 auto;
-  padding: 0 2rem;
+    display: flex;
+    max-width: $max-width;
+    margin: 0 auto;
+    padding: 0 2rem;
 }
 
-.flexible__img {
-  width: 50%;
-  height: auto;
+.flexible__inner__img {
+    width: 50%;
+    height: auto;
 }
 
-.flexible__info {
-  width: 50%;
-  margin-left: 2rem;
+.flexible__inner__info {
+    width: 50%;
+    margin-left: 2rem;
 }
 
 /*---------------- 4.5. Security Section --*/
 .security {
-  @include grid-col-12;
-  max-width: $max-width;
-  margin: 0 auto;
+    @include grid-col-12;
+    max-width: $max-width;
+    margin: 0 auto;
 }
 
 /*---------------- 4.6. Quote Section --*/
 .quote {
-  @include grid-col-12;
-  text-align: center;
+    @include grid-col-12;
+    text-align: center;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /*----------------------------------- ?. Footer ----*/
 footer {
-  @include grid-col-12;
+    @include grid-col-12;
 }
 
 /*--------------------- ?.?. Footer Top --*/
 .footer-top {
-  @include flex-between-center;
-  max-width: $max-width;
-  margin: 0 auto;
+    @include flex-between-center;
+    max-width: $max-width;
+    margin: 0 auto;
 }
 
 /*-- ?.?.?. Footer Top Left --*/
 .footer-top__left {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 
-  & span {
-    margin-left: 0.5rem;
-  }
+    & span {
+        margin-left: 0.5rem;
+    }
 
-  & span:first-of-type {
-    margin-right: 0.8rem;
-  }
+    & span:first-of-type {
+        margin-right: 0.8rem;
+    }
 }
 
 /*------------------ ?.?. Footer Middle --*/
 .footer-middle {
-  @extend .footer-top;
-  padding: 4rem 0;
+    @extend .footer-top;
+    padding: 4rem 0;
 }
 
 /*-- ?.?.?. Footer Middle Links --*/
 .footer-middle__links {
-  margin-left: 2rem;
+    margin-left: 2rem;
 
-  &:first-of-type {
-    margin-left: 0;
-  }
+    &:first-of-type {
+        margin-left: 0;
+    }
 
-  & h3 {
-    margin-bottom: 1.5rem;
-  }
+    & h3 {
+        margin-bottom: 1.5rem;
+    }
 
-  & ul li {
-    line-height: 1.7rem;
-  }
+    & ul li {
+        line-height: 1.7rem;
+    }
 
-  & a:hover {
-    text-decoration: underline;
-  }
+    & a:hover {
+        text-decoration: underline;
+    }
 }
 
 /*------------------ ?.?. Footer Bottom --*/
 .footer-bottom {
-  @extend .footer-top;
+    @extend .footer-top;
 }
