--- a/src/styles/scss/styles.scss
+++ b/src/styles/scss/styles.scss
@@ -128,7 +128,7 @@ small {
 }
 
 /*----------------------- 6. House Storage Page ----*/
-.house-header__img {
+.storage__inner__img {
     background: url("/src/images/1.jpg") center center no-repeat;
     background-size: cover;
 }
