--- a/src/styles/scss/_layout.scss
+++ b/src/styles/scss/_layout.scss
@@ -148,24 +148,17 @@
 /*-------------- 4. House Storage Page Sections ----*/
 
 /*----------------- 4.1. Header Section --*/
-.house-header {
+.storage {
     @include grid-col-12;
 }
 
-.header__inner {
+.storage__inner {
     display: flex;
     max-width: $max-width;
     margin: 0 auto;
 }
 
-.house-header__img {
-    width: 50%;
-    height: auto;
-    margin-left: 2rem;
-    clip-path: polygon(20% 0, 100% 0%, 100% 100%, 0 100%);
-}
-
-.house-header__info {
+.storage__inner__info {
     width: 50%;
     padding: 2rem;
 
@@ -176,6 +169,13 @@
     & p:first-of-type {
         margin-bottom: 1rem;
     }
+}
+
+.storage__inner__img {
+    width: 50%;
+    height: auto;
+    margin-left: 2rem;
+    clip-path: polygon(20% 0, 100% 0%, 100% 100%, 0 100%);
 }
 
 /*---------------- 4.2. Why Us? Section --*/
@@ -238,7 +238,24 @@
 .quote {
     @include grid-col-12;
     text-align: center;
+
+    & button {
+        margin-top: 1rem;
+    }
 }
+
+
+/*------------------------ 4. FAQ Page Sections ----*/
+
+.faq {
+    @include grid-col-12;
+
+    & h1 {
+        margin-bottom: 4rem;
+    }
+}
+
+
 
 /*----------------------------------- ?. Footer ----*/
 footer {
